# Machgraph

./: 3.2.1.point_shadows.fs  CMakeLists.txt  Camera.h  Model.h  README.md  Shader.h  main.cpp  mainshader.fs
shaders/: default.frag  default.vert  light.fs  mainshader.fs  mainshader.vs  parallax.fs  parallax.vs  textured.vert  vert.txt
